<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drake_vendor</name>
  <version>1.0.0</version>
  <description>CMake shim over the drake library.</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license file="LICENSE">BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <depend>protobuf-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

